# Course-Design-of-Compilation

./: README.md  四元式设计.md
codeGeneratingPart1/: CMakeLists.txt  config.cpp  config.h  main.cpp  memMap.cpp  memMap.h  quadruple.cpp  quadruple.h  symbolTable.cpp  symbolTable.h  type.h  wordDealing.cpp  wordDealing.h
codeGeneratingPart2/: CMakeLists.txt  config.cpp  config.h  error.cpp  error.h  main.cpp  memMap.cpp  memMap.h  myVectors.cpp  myVectors.h  quadruple.cpp  quadruple.h  symbolTable.cpp  symbolTable.h  type.h  wordDealing.cpp  wordDealing.h
errorDealing/: CMakeLists.txt  main.cpp
grammarDealing/: CMakeLists.txt  grammarDealing.cbp  main.cpp
wordDealing/: main.cpp  wordDealing.cbp  wordDealing.depend  wordDealing.layout  单词表.txt
